--- a/frontend/src/styles/home.module.css
+++ b/frontend/src/styles/home.module.css
@@ -2,7 +2,29 @@
   width: 100%;
 }
 
+.loginn{
+  width: 100%;
+  height: 100vh;
+}
+
 .login {
   width: 100%;
   margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  flex-direction: column;
+}
+
+.card{
+  width: 200px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+.card > p {
+  margin: 10px 0;
 }
