--- a/frontend/src/styles/navbar.module.css
+++ b/frontend/src/styles/navbar.module.css
@@ -1,14 +1,22 @@
 .nav{
-    position: absolute;
+    position: relative;
     top: 0;
     height: 2.5rem;
     width: 100%;
+    padding: 10px 0;
     display: flex;
     background-color: aliceblue;
     align-items: center;
     justify-content: space-around;
+    margin-bottom: 50px;
 }
-
+.nav > div:nth-child(1):hover{
+    cursor: pointer;
+    color: rgb(116, 150, 243);
+}
+.nav > div:nth-child(2) div:hover{
+    cursor: pointer;
+}
 .div{
     display: flex;
 }
